@@ -1,3 +1,4 @@
+* Replace dsn by params to connect to postgresql
 * Simplify cron
 * Add duration on Cache
 * Add strip wildcards helpers
